--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "emotion": "^9.1.3",
     "emotion-theming": "^9.2.4",
     "minimal.css": "^1.0.1",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "prop-types": "15.x",
     "react": "15.x || 16.x",
