--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.4.1",
     "react-emotion": "^9.2.4",
     "react-redux": "^5.0.7",
+    "react-swipe": "^5.1.1",
     "redux": "^4.0.0",
     "reset-css": "^4.0.1"
   },
