Global font styles

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "rm -rf dist && parcel build src/index.html --public-url /daily-planner",
-    "deploy": "gh-pages -d dist"
+    "build": "rm -rf dist && parcel build src/index.html --public-url $BASE_PATH",
+    "build:staging": "BASE_PATH=/daily-planner yarn build",
+    "build:prod": "BASE_PATH=/ yarn build",
+    "deploy:staging": "gh-pages -d dist"
   },
   "babel": {
     "presets": [
